# Lin

./: .gitignore  .gitmodules  .todo  CMakeLists.txt  LICENSE  README.md  TEMP_CLEANUP_REPORT.md  desloppify.sh  example.lin  flake.nix  glfw_window.c  linc_out  linden_output.ppm  output.txt  patch_file.patch  patch_lower.sh  patch_pass.patch  patch_pass_fix.patch  plan9.md  run_lin.sh  run_test.sh  simple  test_complex_import.lin  test_main2.lin  test_math.lin  test_my.lin  test_parser.lin  test_parser2.lin  test_parser3.lin  update.patch
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  query.json  state-cxx.json.bak
.github/workflows/: ci.yml  pr-checks.yml
docs/: Architecture.md  Contributors.md  MLIR_OP_Migration_Notes.md  Users.md
examples/: README.md  binary_search.lin  calc.lin  connect_four.lin  factorial.lin  fib_print.lin  fib_test.lin  game.lin  guess_the_number.lin  is_palindrome.lin  is_prime.lin  parallel_motto.lin  simple_either.lin  test_gcd.lin  test_io.lin  test_main.lin  test_math.lin  test_math2.lin  test_parse_new.lin  test_parser.lin  test_std.lin  tic_tac_toe.lin  window_demo.lin
include/lin/: Ast.h  Diagnostic.h  EGraphOptimizer.h  InetDialectCAPI.h  LowerToLLVM.h  LowerToLLVMCAPI.h  Lowering.h  LoweringPasses.h  Parser.h  PicDialectsCAPI.h  Semantic.h
lib/dialect/: CMakeLists.txt  InetDialect.cpp  InetDialect.h  InetDialect.td  InetDialectCAPI.cpp  LowerToLLVM.cpp  LowerToLLVMCAPI.cpp  LoweringPasses.cpp  LoweringPasses.cpp.orig  LoweringPasses.cpp.rej  Pass_PicGraphEGraph.cpp  Pass_PicGraphToReduce.cpp  Pass_PicGraphVerify.cpp  Pass_PicReduceLowering.cpp  Pass_PicReduceToRuntime.cpp  Pass_PicRuntimeGPUHelper.cpp  Pass_PicRuntimeToLLVM.cpp  Pass_PicRuntimeToSPIRV.cpp  PicDialectsCAPI.cpp  PicGraphDialect.cpp  PicGraphDialect.h  PicGraphDialect.td  PicReduceDialect.cpp  PicReduceDialect.h  PicReduceDialect.td  PicReduceUtils.h  PicRuntimeDialect.cpp  PicRuntimeDialect.h  PicRuntimeDialect.td  PicRuntimeToLLVMConversionPatterns.h  PicRuntimeToLLVMConversions.h
lib/dialect/passes/: Utils.h
lib/runtime/: runtime.c  runtime.h
scratch/: calc_hashes.py
src/: Ast.c  CMakeLists.txt  Diagnostic.c  EGraphOptimizer.c  Lowering.c  Parser.c  Parser.c.orig  Semantic.cpp  gpu_runtime.c  main.c  main.cpp
src/compiler/: lexer.lin  token.lin
src/core/: Internal.h  Semantic.cpp  Utils.cpp  main.cpp
src/mlir/: Environment.c  Internal.h  Lowering.c  Optimize.c  Utils.c
src/parser/: Internal.h  Lexer.c  Parser.c
src/runtime/: gpu_runtime.c
std/: array.lin  block.lin  cast.lin  control.lin  file.lin  io.lin  logic.lin  loop.lin  math.lin  mem.lin  random.lin  string.lin  sys.lin  types.lin  window.lin
test/: CMakeLists.txt  basic.mlir  collatz.lin  comprehensive.lin  exec_control_flow.lin  exec_fmath.lin  exec_fmath64.lin  exec_io.lin  exec_math.lin  exec_math64.lin  factorial.lin  fib.lin  fib_loop.lin  func_test.lin  gcd.lin  lit.cfg.py  lit.site.cfg.py.in  math_cast.lin  math_extended.lin  math_f32_extended.lin  minimal.lin  parser_test.c  print_ast.lin  repro.lin  simple_and.or  simple_and2  test_annihilation.lin  test_array.lin  test_array64.lin  test_array64_free.lin  test_array64_more.lin  test_array_more.lin  test_binary_ops.lin  test_bitwise.lin  test_bool.lin  test_boundary.lin  test_boundary_cycle.lin  test_cast.lin  test_checkstyle_fail.lin  test_checkstyle_pass.lin  (+72 more)
test/arch/: test_boundary_nested.lin  test_gamma_const.lin  test_redex_annihilate.lin  test_redex_dup.lin  test_rule_lookup_basic.lin
test/control/: test_either_compare.lin  test_either_false.lin  test_either_nested.lin  test_either_true.lin  test_either_var_cond.lin
test/core/: test_capture_outer_scope.lin  test_closure_return_func.lin  test_expr_chained.lin  test_expr_complex.lin  test_expr_deep_nested.lin  test_expr_precedence.lin  test_func_chained.lin  test_func_empty_body.lin  test_func_multi_stmt.lin  test_func_multiple_args.lin  test_func_recursion.lin  test_func_simple.lin  test_func_zero_args.lin  test_higher_order.lin  test_literal_f64.lin  test_literal_i32.lin  test_recursion_fib.lin  test_recursion_mutual.lin  test_recursion_sum.lin  test_types_primitives.lin  test_var_block_shadow.lin  test_var_multiple.lin  test_var_shadow.lin  test_var_single.lin
test/math/: test_add.lin  test_add64.lin  test_and.lin  test_div.lin  test_eq.lin  test_fadd.lin  test_fadd64.lin  test_fdiv.lin  test_feq.lin  test_feq64.lin  test_flt.lin  test_flt64.lin  test_fmul.lin  test_fsqrt.lin  test_fsub.lin  test_ge.lin  test_gt.lin  test_le.lin  test_lt.lin  test_mul.lin  test_mul64.lin  test_neq.lin  test_or.lin  test_rem.lin  test_shl.lin  test_shr.lin  test_sub.lin  test_xor.lin
test/std/: test_array64_new.lin  test_array_new.lin  test_cast_f32_f64.lin  test_cast_f64_f32.lin  test_cast_i32_f32.lin  test_cast_i32_i64.lin  test_cast_i64_i32.lin  test_file_open_close.lin  test_io_print_char.lin  test_io_print_f32.lin  test_io_print_f64.lin  test_io_print_i32.lin  test_io_print_i64.lin  test_io_read_i32.lin  test_mem_i8.lin  test_mem_malloc_free.lin  test_mem_malloc_i64.lin  test_mem_malloc_load_store.lin  test_pair_field0.lin  test_pair_field1.lin  test_string_strlen.lin
